# endless_line

./: .gitignore  README.md  extract_and_merge_park_data.py  malo.ipynb  pyproject.toml
Eleven_Case.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notebooks/: artus.ipynb  charles.ipynb  malo.ipynb
notebooks/Augustin/: EDA.ipynb  cyclicity_analysis.ipynb
scripts/: dashboard.py  extract_and_merge_park_data.py
