[project]
name = "Eleven_Case"
version = "0.1.0"
description = "Wainting time in queue"

dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
    "requests>=2.31.0",
    "ipykernel>=6.25.0",
    "openpyxl>=3.1.2",
    "xgboost>=1.7.6",
    "holidays>=0.63",
    "streamlit>=1.41.1",
]
requires-python = ">=3.12"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["data", "notebooks", "eleven_env"]  # Explicitly list your packages
